[tool.poetry]
name = "mokkari"
version = "3.0.0"
description = "Python wrapper for Metron API"
authors = ["Brian Pepple <bdpepple@gmail.com>"]
license = "GPL-3.0-or-later"
maintainers = ["Brian Pepple <bdpepple@gmail.com>"]
readme = "README.rst"
packages = [
	{ include = "mokkari" },
]
include = [
    { path = "tests", format = "sdist" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
keywords=["comics", "comic", "metadata"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
ratelimit = "^2.2.1"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
pytest-xdist = "^3.3.1"
requests-mock = "^1.9.3"
black = "^23.9.1"
pre-commit = "^3.5.0"
isort = "^5.9.3"
seed-isort-config = "^2.2.0"
tox = "^4.11.3"
flake8-docstrings = "^1.6.0"
flake8-builtins = "^2.1.0"
flake8-rst-docstrings = "^0.3.0"
pyupgrade = "^3.15.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^1.3.0"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["pydantic", "pytest", "ratelimit", "requests", "requests_mock", "urllib3"]

[tool.poetry.urls]
"Homepage" = "https://github.com/Metron-Project/mokkari"
"Bug Tracker" = "https://github.com/Metron-Project/mokkari/issues"

[tool.coverage.run]
source = ["mokkari"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = ["--cov", "-n 3"]