[tool.poetry]
name = "mokkari"
version = "3.0.1"
description = "Python wrapper for Metron API"
authors = ["Brian Pepple <bdpepple@gmail.com>"]
license = "GPL-3.0-or-later"
maintainers = ["Brian Pepple <bdpepple@gmail.com>"]
readme = "README.rst"
packages = [
	{ include = "mokkari" },
]
include = [
    { path = "tests", format = "sdist" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
keywords=["comics", "comic", "metadata"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
ratelimit = "^2.2.1"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
requests-mock = "^1.9.3"
pre-commit = "^3.5.0"
seed-isort-config = "^2.2.0"
tox = "^4.11.3"
ruff = "^0.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^1.3.0"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["pydantic", "pytest", "ratelimit", "requests", "requests_mock", "urllib3"]

[tool.ruff]
fix = true
line-length = 100
show-fixes = true
target-version = "py310"
lint.ignore = ["A001", "A003", "COM812", "COM819", "E501", "ISC001", "Q000", "Q001", "Q002", "Q003", "W191"]
lint.select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C40",
    "COM",
    "DTZ",
    "E",
    "ERA",
    "F",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TCH",
    "TID",
    "UP",
    "W",
    "YTT"
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["ERA001", "S101", "SLF001"]

[tool.poetry.urls]
"Homepage" = "https://github.com/Metron-Project/mokkari"
"Bug Tracker" = "https://github.com/Metron-Project/mokkari/issues"

[tool.coverage.run]
source = ["mokkari"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = ["--cov", "-n 3"]