[project]
name = "mokkari"
version = "3.16.1"
description = "Python wrapper for Metron API"
authors = [{ name = "Brian Pepple", email = "bdpepple@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
maintainers = [{ name = "Brian Pepple", email = "bdpepple@gmail.com" }]
keywords = ["comics", "comic", "metadata", "api", "rest"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
]
dependencies = [
  "requests>=2.26.0,<3",
  "pydantic>=2.10.3,<3",
  "pyrate-limiter>=3.7.0,<4",
]

[project.urls]
Homepage = "https://github.com/Metron-Project/mokkari"
"Bug Tracker" = "https://github.com/Metron-Project/mokkari/issues"

[dependency-groups]
dev = ["hatchling>=1.27.0", "pre-commit>=4", "tox>=4.11.3,<5", "tox-uv>=1.25.0"]
test = ["coverage[toml]~=7.0", "pytest-cov>=6.2.1", "requests-mock>=1.9.3,<2"]
lint = [
  "codespell>=2.1.0,<3",
  "pyright>=1.1.232,<2",
  "radon[toml]>=6.0.1,<7",
  "ruff>=0.12.4",
  "types-python-dateutil>=2.8.19,<3",
  "vulture~=2.3",
]
docs = [
  "mkdocs>=1.6.0,<2",
  "mkdocs-include-markdown-plugin>=7.1.6",
  "mkdocs-material>=9.6.15",
  "mkdocstrings[python]>=0.29.1",
]

[tool.uv]
default-groups = ["dev", "test", "lint", "docs"]

[tool.hatch.build.targets.sdist]
include = ["mokkari", "tests"]
exclude = ["*/**/*~"]

[tool.hatch.build.targets.wheel]
include = ["mokkari"]
exclude = ["*/**/*~"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.codespell]
skip = './cache,./dist,./test-results,.git,.mypy_cache,.pytest_cache,.venv*,node_modules,package-lock.json,uv.lock,run.spec'
builtin = 'clear,rare,code'
check-hidden = true
# Remove 'coverd' when this issue is resolved
# https://github.com/codespell-project/codespell/issues/1212
ignore-words-list = 'thead,ro,jupyter,coverd,searched,ws'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = [
  "pydantic",
  "pytest",
  "ratelimit",
  "requests",
  "requests_mock",
  "urllib3",
]

[tool.ruff]
extend-exclude = ["typings"]
line-length = 100
show-fixes = true
target-version = "py310"

[tool.ruff.lint]
extend-ignore = [
  "S101",
  "D203",
  "D213",
  # Format ignores
  "W191",
  "E501",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
extend-select = [
  "A",
  "ARG",
  "B",
  "B9",
  "C",
  "C4",
  "C90",
  "D",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "EXE",
  "F",
  "I",
  "ICN",
  "INP",
  "ISC",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "N",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
  # "ANN", "ERA", "COM"
]
external = ["V101"]
task-tags = ["TODO", "FIXME", "XXX", "http", "HACK"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF001", "T201", "T203", "PLR2004"]
"tests/test_session.py" = ["ARG001", "ARG005", "D103", "DTZ005"]
"docs/*" = ["D104", "A001"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.vulture]
exclude = [
  ".git/",
  ".mypy_cache/",
  ".pytest_cache/",
  "*.venv*",
  "*/__pycache__",
  "dist/",
  "node_modules/",
  "test_results/",
  "typings/",
]
min_confidence = 61
sort_by_size = true

[tool.coverage.html]
directory = "test-results/coverage"

[tool.coverage.run]
source = ["mokkari"]
branch = true
concurrency = ["multiprocessing"]
omit = [
  ".git/*",
  ".mypy_cache/*",
  ".pytest_cache/*",
  ".venv*/*",
  "*__pycache__*",
  "dist/*",
  "node_modules/*",
  "test-results/*",
  "typings/*",
]

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/node_modules",
  ".git",
  ".tox",
  ".mypy_cache",
  ".pytest_cache",
  ".venv*",
  "cache",
  "dist",
  "package-lock.json",
  "uv.lock",
  "test-results",
  "typings",
]
useLibraryCodeForTypes = true
reportMissingImports = true
reportImportCycles = true
pythonVersion = "3.10"
pythonPlatform = "All"

[tool.pytest.ini_options]
addopts = """
    --junit-xml=test-results/pytest/results.xml
    -ra
    --strict-config
    --strict-markers
    --cov
    --cov-append
    --cov-report=html
    --cov-report=term
"""
junit_family = "xunit2"
testpaths = "tests"

[tool.radon]
exclude = "*~,.git/*,.mypy_cache/*,.pytest_cache/*,.venv*,__pycache__/*,cache/*,dist/*,node_modules/*,test-results/*,typings/*"

[tool.tox]
env_list = ["3.10", "3.11", "3.12", "3.13"]
min_version = "4.22"

[tool.tox.env_run_base]
commands = [["pytest"]]
dependency_groups = ["test"]
